--- a/index.html
+++ b/index.html
@@ -368,17 +368,13 @@ ENDIF</code></pre>
                 </div>
             </div>
             <div class="step">
-                <h2 class="red">Fazit</h2>
+                <h2 class="red">Schema</h2>
                 <div class="mfp-lightbox row">
                     <div class="six columns">
                         <a href="resources/img/schema.png">
                             <img src="resources/img/schema.png" /></a>
                     </div>
-                    <div class="six columns">
-                        <ul class="line-height-five-one">
-                            <li>tja </li>
-                        </ul>
-                    </div>
+                    
                 </div>
             </div>
             <div class="step">
@@ -389,9 +385,10 @@ ENDIF</code></pre>
             </div>
             <div class="step">
                 <h2>Literatur</h2>
-                <h4>Sturm</h4>
+                <h4>Beispieldateien</h4>
+                <p>mit freundlicher Genehmigung von Marjam Mahmoodzada aus:</p>
                 <ul class="small line-height-one-five">
-                    <li> Marjam Mahmoodzada: Mahmoodzada, Marjam: Eine digitale Edition. Briefe von
+                    <li> Marjam Mahmoodzada: Eine digitale Edition. Briefe von
                         Jacoba van Heemskerck und Franz Marc an Herwarth Walden (1914-1915), Mainz
                         2017 (Masterarbeit). <a
                             href="http://www.students.uni-mainz.de/mmahmood/html/"
