--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Gib Kommando  >#*export,beispiel.tf,beispiel_neu.rtf,,lo=+,ig=-</code></pre>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>XML Datei</td>
+                            <td><code>tei.xml</code><br />XML Datei</td>
                             <td>
                                 <ul class="six columns line-height-one-five">
                                     <li><code>tustep.tf</code>
