--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Gib Kommando  >#*export,beispiel.tf,beispiel_neu.rtf,,lo=+,ig=-</code></pre>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><code>tei.xml</code><br />XML Datei</td>
+                            <td><ul class="six columns line-height-one-five"><li><code>tei.xml</code><br />XML Datei</li></ul></td>
                             <td>
                                 <ul class="six columns line-height-one-five">
                                     <li><code>tustep.tf</code>
@@ -458,8 +458,8 @@ Gib Kommando  >#*export,beispiel.tf,beispiel_neu.rtf,,lo=+,ig=-</code></pre>
                                 </ul>
                             </td>
 
-                            <td><code>ergebnis.rtf</code>
-                                <br />RTF-Datei </td>
+                            <td><ul class="six columns line-height-one-five"><li><code>ergebnis.rtf</code>
+                                <br />RTF-Datei </li></ul></td>
                         </tr>
                         <tr>
                             <td class="centered" colspan="3"
