link aufs richtige git

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                 <h2 class="red up-25">TUSTEP-Modul #*export</h2>
                 <h5 class="down-100">
                     <strong>Data: </strong><a
-                        href="https://github.com/digicademy/20170929_Der_Sturm"
+                        href="https://github.com/kollatzthomas/20170927_TEI2RTF"
                         >https://github.com/digicademy/20170927_TEI2RTF</a>
                     <br /><strong>Slides: </strong>
-                    <a href="https://dicicademy.github.io/20170927_TEI2RTF"
+                    <a href="https://kollatzthomas.github.io/20170927_TEI2RTF/"
                         title="View the presentation online">
-                        https://dicicademy.github.io/20170927_TEI2RTF </a>
+                        https://kollatzthomas.github.io/20170927_TEI2RTF/ </a>
                 </h5>
                 <h5>
                     <strong><a href="http://orcid.org/0000-0003-1904-1841">Thomas
@@ -727,7 +727,7 @@ ENDIF</code></pre>
                 <ul class="small line-height-one-five">
 
                     <li>
-                        <a href="https://dicicademy.github.io/20170927_TEI2RTF"> Präsentation </a>
+                        <a href="https://kollatzthomas.github.io/20170927_TEI2RTF"> Präsentation </a>
                     </li>
                     <li> License: <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY
                             4.0</a>, Thomas Kollatz</li>
